--- a/components/input-button.html
+++ b/components/input-button.html
@@ -2,7 +2,7 @@
     <input
       type="text"
       class="input"
-      placeholder="Enter doamain name here..."
+      placeholder="Enter domain name here..."
     />
     <button class="btn btn--accent">Search</button>
   </div>
