--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,11 +158,20 @@ a {
     height: 40px;
 }
 
+.icon--small{
+    height: 30px;
+    width: 30px;
+}
+
 .icon--primary {
     fill: var(--color-primary)
 }
 
-.icon--container {
+.icon--white{
+    fill: white;
+}
+
+.icon-container {
     background: #f3f9fa;
     width: 64px;
     height: 64px;
@@ -172,6 +181,9 @@ a {
     align-items: center;
 }
 
+.icon-container--accent {
+    background: var(--color-accent);
+}
 /* Buttons */
 
 .btn{
@@ -435,5 +447,37 @@ a {
 @media screen and (min-width: 768px) {
     .grid--1x2 {
         grid-template-columns: 1fr 1fr ;
+    }
+}
+
+/* Testimonials */
+
+.testimonial {
+    padding: 3rem;
+
+}
+
+.testimonial__image{
+    position: relative;
+}
+
+.testimonial__image > img{
+    width: 100%;
+}
+
+.testimonial__image > .icon-container {
+    position: absolute;
+    top: 3rem;
+    right: -32px; /* because icon-container is 64px */
+
+}
+
+@media screen and (min-width: 768px) {
+    .testimonial .quote,
+    .testimonial .quote__author{
+        font-size: 2.4rem;
+    }
+    .testimonial .quote {
+        margin-left: 6rem;
     }
 }
